--- a/NexusModsNET/NexusModsNET.csproj
+++ b/NexusModsNET/NexusModsNET.csproj
@@ -16,7 +16,16 @@
 		<FileVersion>1.0.5.0</FileVersion>
 		<Version>1.0.5</Version>
 		<Title>NexusModsNET</Title>
-	</PropertyGroup>
+		<PlatformTarget>x64</PlatformTarget>
+		<Platforms>x64</Platforms>
+		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+        <DebugType>none</DebugType>
+        <Optimize>True</Optimize>
+    </PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)'=='Debug'">
+        <DebugType>full</DebugType>
+        <Optimize>False</Optimize>
+    </PropertyGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
