--- a/NexusModsNET/NexusModsNET.csproj
+++ b/NexusModsNET/NexusModsNET.csproj
@@ -18,7 +18,7 @@
 		<Version>1.0.5</Version>
 		<Title>NexusModsNET</Title>
 		<PlatformTarget>x64</PlatformTarget>
-		<Platforms>AnyCPU</Platforms>
+		<Platforms>AnyCPU;x64</Platforms>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
         <DebugType>none</DebugType>
         <Optimize>True</Optimize>
